add canvas object and routing path

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -3,3 +3,4 @@
   <p class="titlehome">WELCOME TO PICTIONARY !</p>
   <p class="txthome">Play together with you friends and make custom rooms to compete with others.</p>
 </div>
+<button routerLink="canvas">canvas</button>
