renale button next => connexion

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -21,6 +21,6 @@
         STEP 3 - IF THE DRAWER HAS GUESSED THE WORD TO THE DEVINER HE WIN THE GAME AND ROLES CHANGE.
       </p>
     </div>
-    <button class="buttonnext" (click)="login()" >NEXT</button>
+    <button class="buttonnext" (click)="login()">Connexion</button>
   </div>
 </div>
