Correction mini bug pour cli

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -31,7 +31,7 @@
         <img src="assets/google.png" class="googleconnect"> SIGN IN WITH GOOGLE
       </button>
     </ng-template>
-    <button class="buttonnext" (click)="match-making()" routerLink="/match-making">Play</button>
+    <button class="buttonnext" routerLink="/match-making">Play</button>
 
   </div>
 </div>
