modification style page matchmaking

--- a/src/app/loginpage/loginpage.component.html
+++ b/src/app/loginpage/loginpage.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="afAuth.authState | async as user; else showLogin">
+<!-- <div *ngIf="afAuth.authState | async as user; else showLogin">
   <h1>Hello {{ user.displayName }}!</h1>
   <button (click)="logout()" class="buttongooglelogout">Logout</button>
 </div>
@@ -7,4 +7,4 @@
   <button class="boutonconnection" (click)="login()">
     <img src="assets/google.png" class="googleconnect"> SIGN IN WITH GOOGLE
   </button>
-</ng-template>
+</ng-template> -->
