--- a/src/app/match-making/match-making.component.html
+++ b/src/app/match-making/match-making.component.html
@@ -1,1 +1,6 @@
-<p>Waiting for another player</p>
+<div class="contmatch">
+    <div class="match">
+        <img src="assets/pictionary.png" class="logomatch">
+        <p>Waiting for an opponent to your size</p>
+    </div>
+</div>
