--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,8 +1,5 @@
-<p>
-  canvas works!
-</p>
-<ul>
-  <li class="text" *ngFor="let word of random_word | async">
-    {{word.name}}
-  </li>
-</ul>
+<div class="contmatch">
+  <div class="match">
+    <img src="assets/pictionary.png" class="logomatch">
+  </div>
+</div>
