--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -25,5 +25,7 @@
       History
     </h1>
     <button class="buttonnext" (click)="login()">Play</button>
+    <button class="buttonnext" routerLink="/canvas">Canvas</button>
+
   </div>
 </div>
