--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -1,6 +1,8 @@
-<<<<<<< HEAD
+canvas { border: 1px solid #000; background-color: white; transform: translate(75%) }
+
 .contmatch {
   position: relative;
+
 }
 
 .logomatch {
@@ -24,6 +26,3 @@
   margin-bottom: 100px;
   padding-bottom: 75px;
 }
-=======
-/* vide */
->>>>>>> random_word
