--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,8 +1,13 @@
 <div class="contmatch">
   <div class="match">
     <img src="assets/pictionary.png" class="logomatch">
+    <div *ngIf='isMyTurn(); else elseBlock'>
+      <p>c'est ton tour</p>
+    </div>
+
+    <div #elseBlock>
+      <p>c'est pas ton tour</p>
+    </div>
   </div>
-  bite
-  
   <canvas #canvas></canvas>
 </div>
