Seul 1 de 2 joueur peux dessiner

--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -2,5 +2,7 @@
   <div class="match">
     <img src="assets/pictionary.png" class="logomatch">
   </div>
+    
   <canvas #canvas></canvas>
+  <button (click)="changeTurn()">Change turn</button>
 </div>
