--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -1,15 +1,15 @@
 <div class="contmatch">
   <div class="match">
-    <img src="assets/pictionary.png" class="logomatch">
+    <img src="assets/pictionary.png" class="logomatch"><!--
     <button (click)="changeTurn()">Change turn</button>
-    <div *ngIf="!room.turn">{{room.randomWord}}</div>
+    <div *ngIf="!room.turn">{{room.randomWord}}</div> -->
   </div>
 
-  <form *ngIf="room.turn">
+ <!--  <form *ngIf="room.turn">
     Answers:
     <input type="text" name="Answer">
-    <input type="submit" value="submit">
-  </form>
+    <button type="submit" value="submit">Send</button>
+  </form> -->
 
   <canvas #canvas></canvas>
 </div>
