--- a/src/app/canvas/canvas.component.css
+++ b/src/app/canvas/canvas.component.css
@@ -46,7 +46,7 @@ canvas { border: 4px solid #295ea3; background-color: white; }
   border-radius:5px;
 }
 
-.boutonturn{
+.boutonquit{
   position: absolute;
   right:15px;
   bottom:15px;
@@ -57,6 +57,7 @@ canvas { border: 4px solid #295ea3; background-color: white; }
   padding:10px;
   border-radius:5px;
   border:none;
+  cursor:pointer;
 }
 
 .formword{
