--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -2,13 +2,13 @@
   <div class="match">
     <img src="assets/pictionary.png" class="logomatch">
     
-    <form class="formword" *ngIf="room.turn">
+    <form class="formword" *ngIf="room && !isMyTurn()">
       Answers:
       <input type="text" name="Answer" style="width:50px;margin-left:10px;margin-right:10px">
       <input type="submit" value="submit">
     </form>
-    <button class="boutonturn" >Quit</button>
+    <button class="boutonquit" routerLink="/">Quit</button>
     <canvas class="draw" #canvas></canvas>
-    <div class="motadeviner" *ngIf="!room.turn">draw a {{room.randomWord}}</div>
+    <div class="motadeviner" *ngIf="room && isMyTurn()">draw a {{room.randomWord}}</div>
   </div>
 </div>
