--- a/src/app/canvas/canvas.component.html
+++ b/src/app/canvas/canvas.component.html
@@ -2,11 +2,11 @@
   <div class="match">
     <img src="assets/pictionary.png" class="logomatch">
     
-    <form class="formword" *ngIf="room && !isMyTurn()">
+    <div class="formword" *ngIf="room && !isMyTurn()">
       Answers:
-      <input type="text" name="Answer" style="width:50px;margin-left:10px;margin-right:10px">
-      <input type="submit" value="submit">
-    </form>
+      <input type="text" id="mot" name="Answer" style="width:50px;margin-left:10px;margin-right:10px">
+      <button (click)="checkWord()">valid</button>
+    </div>
     <button class="boutonquit" routerLink="/">Quit</button>
     <canvas class="draw" #canvas></canvas>
     <div class="motadeviner" *ngIf="room && isMyTurn()">draw a {{room.randomWord}}</div>
